--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,9 @@ html {
   background-color: var(--main-white-color);
   color: var(--main-text-color);
   font-family: "Montserrat", serif;
-  font-size: 20px;
+  font-size: 62.5%;
   overflow-x: hidden;
+  line-height: 1;
 }
 
 /* --------------------- */
@@ -40,41 +41,55 @@ h2 {
 }
 
 h1 {
-  font-size: 64px;
+  font-size: 6.4rem;
   line-height: 72px;
   margin-bottom: 16px;
   text-align: left;
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 3.6rem;
   line-height: 46px;
+}
+h3 {
+  font-size: 2.4rem;
+  line-height: 34px;
 }
 
 p {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 400;
   line-height: 24px;
 }
 
 @media (max-width: 1023px) {
+  h1 {
+    font-size: 5.6rem;
+    /* line-height: 28px;
+    text-align: left; */
+  }
+  h3 {
+    font-size: 1.8rem;
+    line-height: 28px;
+    text-align: left;
+  }
 }
 @media (max-width: 768px) {
+  h3 {
+    font-size: 1.8rem;
+    line-height: 28px;
+    text-align: left;
+  }
 }
 @media (max-width: 480px) {
   h1 {
-    font-size: 36px;
+    font-size: 3.4rem;
     line-height: 44px;
     text-align: center;
   }
   h2 {
-    font-size: 24px;
+    font-size: 2.4rem;
     line-height: 36px;
-    text-align: left;
-  }
-  h3 {
-    font-size: 18px;
-    line-height: 28px;
     text-align: left;
   }
 }
@@ -131,17 +146,40 @@ p {
   width: 1440px;
   margin: 0 auto;
   width: 100%;
-  padding: 0 128px;
+  padding: 0 12.8em;
 }
-@media (max-width: 1023px) {
+
+.common_grid {
+  display: grid;
+  margin: 20px auto;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns for desktop */
+  grid-auto-rows: minmax(100px, auto); /* Ensures balanced row heights */
+  gap: 20px;
+}
+
+@media (max-width: 1024px) {
   .container {
-    padding: 0 24px;
+    padding: 0 2.4em;
+  }
+
+  .common_grid {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
-.outline-text {
+@media (max-width: 480px) {
+  .common_grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.outline_text_white {
   color: transparent;
-  -webkit-text-stroke: 2px #fff;
+  -webkit-text-stroke: 1px #fff;
+}
+.outline_text_black {
+  color: transparent;
+  -webkit-text-stroke: 1px #000;
   /* background: rgba(115, 226, 204, 0.752);
   background-clip: #297c6b;
   -webkit-background-clip: text; */
@@ -154,7 +192,7 @@ p {
 }
 
 .italic-text b {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 700;
   color: #000;
 }
@@ -400,6 +438,7 @@ header {
   .hero_text_box {
     flex-direction: column;
     align-items: center;
+    padding: 1rem;
     justify-content: center;
   }
   .hero_left {
@@ -413,6 +452,7 @@ header {
 
   .hero_title {
     text-align: center;
+    padding: 0 0 0;
   }
 
   .hero_description {
@@ -425,9 +465,7 @@ header {
   .hero_text_box {
     padding-top: 1rem;
   }
-  .hero_title {
-    padding-top: 0;
-  }
+
   .hero_right {
     width: 328px;
   }
@@ -438,11 +476,19 @@ header {
 }
 
 /* --------------------- */
+/* our_story_section */
+/* --------------------- */
+.our_story_section {
+  position: relative;
+  padding-bottom: 3rem;
+  background: linear-gradient(#f5f5f5, var(--faded-elements-color));
+}
+
+/* --------------------- */
 /* image_grid_box */
 /* --------------------- */
 .image_grid_box {
   padding-top: 2rem;
-  background: linear-gradient(#f5f5f5, var(--faded-elements-color));
 }
 
 .image_grid {
@@ -458,81 +504,16 @@ header {
   border-radius: 8px;
 }
 
-@media (max-width: 480px) {
-  .image_grid {
-    display: none;
-  }
+.our_story_section .common_grid {
+  margin-bottom: 80px;
 }
 
-/* --------------------- */
-/* our_story_section */
-/* --------------------- */
-.our_story_section {
-  position: relative;
-  padding-bottom: 3rem;
-  background: var(--faded-elements-color);
-}
-
-.text-blocks {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  margin-top: 10px;
-}
-
-.responsive_grid {
-  display: grid;
-  margin: 20px auto;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns for desktop */
-  grid-auto-rows: minmax(100px, auto); /* Ensures balanced row heights */
-  gap: 20px;
-}
-@media (max-width: 768px) {
-  .responsive_grid {
-    grid-template-columns: repeat(2, 1fr); /* 2 columns for tablets */
-  }
-}
-
-@media (max-width: 480px) {
-  .responsive_grid {
-    grid-template-columns: 1fr; /* 1 column for mobile */
-  }
-}
-
-.responsive_grid_content p {
+.our_story_description {
   margin-bottom: 8px;
 }
+
 .visible_on_tab_screen {
   display: none;
-}
-
-@media (max-width: 1024px) {
-  .responsive-grid {
-    grid-template-columns: repeat(2, 1fr); /* 2 columns for tablet */
-  }
-
-  .visible_on_tab_screen {
-    display: block; /* Show only on tablet screens */
-  }
-
-  .hidden_on_tab_screen {
-    display: none; /* Hide on tablet screens */
-  }
-}
-
-/* Mobile: 1 column */
-@media (max-width: 768px) {
-  .responsive-grid {
-    grid-template-columns: 1fr;
-  }
-
-  .visible_on_tab_screen {
-    display: block;
-  }
-
-  .hidden_on_tab_screen {
-    display: none;
-  }
 }
 
 .success-rate {
@@ -551,7 +532,173 @@ header {
   justify-content: center;
 }
 
+@media (max-width: 1024px) {
+  .visible_on_tab_screen {
+    display: block;
+  }
+
+  .hidden_on_tab_screen {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .visible_on_tab_screen {
+    display: block;
+  }
+
+  .hidden_on_tab_screen {
+    display: none;
+  }
+}
+
+/* --------------------- */
+/* TESTIMONIAL */
+/* --------------------- */
+.carousel_box {
+  background-color: transparent;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-height: 770px;
+}
+
+.carousel {
+  display: flex;
+  justify-content: space-between;
+  gap: 36px;
+  position: absolute;
+  overflow: hidden;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 270px;
+  width: 100%;
+  max-width: 952px;
+  min-width: 328px;
+  /* height: 100%; */
+  border-radius: 12px;
+  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.12);
+}
+.carousel_left_content {
+  height: 70px;
+}
+
+.carousel_content {
+  background-color: var(--background-color);
+  /* min-width: 328px;
+  min-width: 496px; */
+  padding: 38px 65px;
+  color: rgba(255, 255, 255, 1);
+  height: 100%;
+}
+
+.carousel_title {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  gap: 20px;
+}
+.carousel_title .quote_icon {
+  display: inline-block;
+  width: 60px;
+  height: 47px;
+}
+
+.carousel_description {
+  display: block;
+  margin-top: 16px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 28px;
+  white-space: wrap;
+}
+
+@media (max-width: 1024px) {
+  .carousel {
+    gap: 26px;
+  }
+  .carousel_content {
+    padding: 16px 32px;
+  }
+  .user_profile {
+    width: 180px;
+    height: fill;
+  }
+  .carousel_left_content .quote_icon {
+    display: none;
+  }
+  .carousel_content .quote_icon {
+    display: inline-block;
+    width: 40px;
+    height: 31px;
+  }
+  .carousel_description {
+    font-size: 1.4rem;
+    line-height: 24px;
+  }
+}
+
+@media (max-width: 480px) {
+  .image_grid {
+    display: none;
+  }
+
+  .carousel_box {
+    height: 900px;
+  }
+  .carousel {
+    /* height: 328px; */
+    gap: 0;
+    box-shadow: none;
+    flex-direction: column;
+    width: 328px;
+    padding: 0;
+    height: 450px;
+    margin: 0 auto;
+  }
+  .carousel_title .quote_icon {
+    display: inline-block;
+    width: 60px;
+    height: 47px;
+  }
+  .carousel_left_content .quote_icon {
+    display: inline-block;
+  }
+  .carousel_left_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    position: relative;
+    padding: 0px 32px;
+  }
+
+  .carousel_left_content .user_profile {
+    z-index: 999;
+    width: 180px;
+    height: 180px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+  }
+
+  .carousel_right_content {
+    padding: 132px 32px 72px;
+    width: 100%;
+    border-radius: 12px;
+    flex: 1;
+    height: fit-content;
+  }
+
+  .carousel_title .quote_icon {
+    display: none;
+  }
+}
+
 /* our_features_section */
+.our_features_section {
+  margin-top: 300px;
+  padding: 5em 0;
+}
 .features_grid {
   padding: 1.4rem 0;
   display: grid;
@@ -576,119 +723,9 @@ header {
 }
 
 /* --------------------- */
-/* TESTIMONIAL */
-/* --------------------- */
-.carousel_box {
-  background-color: transparent;
-  position: relative;
-  width: auto;
-  height: 270px;
-}
-
-.carousel {
-  display: flex;
-  justify-content: space-between;
-  gap: 36px;
-  position: absolute;
-  top: -30px;
-  left: 50%;
-  transform: translateX(-50%);
-  height: 270px;
-  box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.12);
-  border-radius: 12px;
-  overflow: hidden;
-}
-
-.carousel_content {
-  background-color: var(--background-color);
-  min-width: 328px;
-  min-width: 496px;
-  padding: 38px 65px;
-  color: rgba(255, 255, 255, 1);
-  height: 100%;
-}
-
-.carousel_title {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  gap: 20px;
-}
-.carousel_title img {
-  width: 60px;
-  height: 47px;
-}
-
-.carousel_content em {
-  display: inline-block;
-  margin-top: 16px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 28px;
-  text-align: left;
-}
-@media (max-width: 480px) {
-  .carousel_box .container {
-    background-color: var(--background-color);
-  }
-  .carousel_box {
-    height: 500px;
-  }
-  .carousel {
-    height: 328px;
-
-    flex-direction: column;
-  }
-
-  .carousel_content_user {
-    position: relative;
-    height: 84px;
-  }
-
-  .user_profile {
-    position: absolute;
-    top: -110px;
-    left: 0px;
-    z-index: 999;
-    width: 180px;
-    height: 180px;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-  }
-  .quote_icon {
-    width: 60px;
-    height: 47px;
-    position: absolute;
-    top: 23px;
-    right: 0px;
-  }
-
-  .carousel > img,
-  .carousel_title img {
-    display: none;
-  }
-  .carousel_content {
-    padding: 72px 32px;
-    min-width: 328px;
-    height: auto;
-  }
-
-  .carousel_content em {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
-  }
-}
-
-/* --------------------- */
 /* MEDIA-QUERY */
 /* --------------------- */
 /* Mobile View: max-width 768px */
-@media (max-width: 768px) {
-  /* .menu {
-    display: none;
-  } */
-}
 
 /* Tablet View: 769px to 1024px */
 @media (min-width: 769px) and (max-width: 1024px) {
@@ -726,12 +763,9 @@ header {
 }
 
 .card-title {
-  font-size: 1.125rem;
-  font-weight: 700;
   text-align: center;
   color: var(--main-text-color);
   line-height: 28px;
-  text-align: center;
 }
 
 .info-icon {
